--- a/picker.html
+++ b/picker.html
@@ -234,7 +234,15 @@ button.disabled:hover {
 'use strict';
 
 var items = [
-    // Define your items here
+    {id: '1979'}
+    {id: '21stcentury'}
+    {id: '444'}
+    {id: '8thwonder'}
+    {id: '99problems'}
+    {id: 'aberdeen'}
+    {id: 'abovethelaw'}
+    {id: 'adamssong'}
+    
 ];
 
 var myPicker = new picker.Picker({
